# GitMentor

./: .branch_context  .gitignore  COMMIT_MESSAGE.txt  README.md  Setup.md  cli.py  config.yaml  main.py  pyproject.toml
.github/workflows/: gitmentor.yml  reporanger.yml
.gitmentor_workspace/: architecture_overview.md  code_quality_report.md  commit_message.txt  git_workflow.md  pr_documentation.md
.gitworkspace/: commit_index.json
.gitworkspace/commit_docs/: 20251225_045621_2025122.md
docs/: SYSTEM_DESIGN.md
src/agents/: explainer.py  scribe.py
src/tools/: history.py
src/utils/: config.py  llm.py  workspace.py
